--- a/app/views/messages/index.html.erb
+++ b/app/views/messages/index.html.erb
@@ -9,7 +9,7 @@
         <p>
           <em>Regarding <%= link_to message_path(message) do %>Application #<%= message.ref_application_id %><% end %></em>
           <br>
-          Original Message Sent by
+          Original Message Sent on <%= message.created_at.strftime("%m/%d/%Y") %> by
           <strong>
             <% if message.user.admin %>
               Admin
@@ -41,7 +41,8 @@
           <% end %>
         <% end %></h4>
         <p>
-          <em>Regarding <%= link_to message_path(message) do %>Application #<%= message.ref_application_id %><% end %></em>
+          <em>Regarding <%= link_to message_path(message) do %>Application #<%= message.ref_application_id %><% end %></em><br>
+          Original Message on <%= message.created_at.strftime("%m/%d/%Y") %>
         </p>
       <% end %>
     <% else %>
