--- a/app/views/app_forms/show.html.erb
+++ b/app/views/app_forms/show.html.erb
@@ -8,7 +8,7 @@
 
   <header class="text-center">
     <h1>
-      <%= @app_form.application_type %> Application #<%= fixed_digit_number(@app_form.id) %>
+      Application #<%= fixed_digit_number(@app_form.id) %>
     </h1>
   </header>
 
