Amount to App Line

--- a/app/views/app_forms/_app_line.html.erb
+++ b/app/views/app_forms/_app_line.html.erb
@@ -33,7 +33,7 @@
     </strong><br>
 
     Amount Requested: <strong>
-      <%= number_to_currency(application.user_id, unit: "$") %>
+      <%= number_to_currency(application.requested_amount, unit: "$") %>
     </strong><br>
 
     Application Date: <strong>
