Fixed Digit # Shortened

--- a/app/views/app_forms/index.html.erb
+++ b/app/views/app_forms/index.html.erb
@@ -207,7 +207,7 @@
 
                 <li class="nav-item">
                   <a class="nav-link" id="<%= user.id %>-panel-tab" data-toggle="tab" href="#<%= user.id %>-panel" role="tab" aria-controls="<%= user.id %>-panel">
-                    Member #<%= fixed_digit_number(user.id) %> (<%= apps.count %>)
+                    User #<%= fixed_digit_number(user.id) %> (<%= apps.count %>)
                   </a>
                 </li>
               <% end %>
