--- a/app/views/app_forms/index.html.erb
+++ b/app/views/app_forms/index.html.erb
@@ -186,7 +186,7 @@
 
         <!-- Nav tabs -->
         <div class="row">
-          <div class="col-md-3">
+          <div class="col-md-4 col-lg-4">
             <ul class="nav md-pills pills-primary flex-column" role="tablist">
 
               <% @users_with_apps = [] %>
@@ -214,7 +214,7 @@
 
             </ul>
           </div>
-          <div class="col-md-9">
+          <div class="col-md-8 col-lg-9">
             <!-- Tab panels -->
             <div class="tab-content vertical">
 
