--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -1,6 +1,6 @@
 <main>
 
-  <div class="card card-image" style="background-image: url(https://tocacares.s3-us-west-1.amazonaws.com/feet-around-ball.jpg);background-repeat: no-repeat; background-size: cover;">
+  <div class="card card-image" style="background-image: url(<%= image_url('https://tocacares.s3-us-west-1.amazonaws.com/TOCA+Cares+Header-min.png') %>) ;background-repeat: no-repeat; background-size: cover;">
     <div class="text-white text-center rgba-black-light py-5 px-4">
       <div>
         <%= image_tag "TOCA_CARES_LOGO_FNL7.png", class: "mb-2" %>
