Index Image Mobile Variation

--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -6,7 +6,7 @@
         <%= image_tag "TOCA_CARES_LOGO_FNL7.png", class: "mb-2" %>
         <div class="row justify-content-center">
           <div class="container">
-            <div class="bg-transparent-white py-3 px-4 my-4">
+            <div class="bg-transparent-white py-3 px-4 my-4 d-none d-sm-block">
               <h2 class="bold">
                 The strength of the team is each member. <br class="d-none d-md-block">The strength of each member is&nbsp;the&nbsp;team.
                 <br><em><small>―Phil Jackson</small></em>
@@ -27,9 +27,17 @@
     </div>
   </div>
 
-
+  <div class="bg-toca-red d-sm-none my-0 py-2">
+    <div class="py-3 px-4 my-4 color-white text-center">
+      <h2 class="bold">
+        The strength of the team is each member. <br class="d-none d-md-block">The strength of each member is&nbsp;the&nbsp;team.
+        <br><em><small>―Phil Jackson</small></em>
+      </h2>
+    </div>
+  </div>
 
   <div class="container my-5">
+
     <p class="h2 text-center thin mb-4">
       We, the employees and shareholders of TOCA, have established
       <%= image_tag "TOCA_CARES_LOGO_FNL5.png", style: "display: inline-block; height: 25px" %>
