--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -61,12 +61,20 @@
 
 
         <div class="row">
-          <div class="col-12 col-sm-6 col-lg-4">
+
+
+          <div class="col-12">
             <%= link_to app_forms_path, class: "btn btn-secondary my-3 btn-lg btn-block", style: "height: 67px" do %>
-              <% if @open_applications.count != 0 %>
-                <div class="bg-toca-red notification-bubble"><%= @open_applications.count %></div>
-              <% end %>
-              Application Viewer
+            <% if @open_applications.count != 0 %>
+            <div class="bg-toca-red notification-bubble"><%= @open_applications.count %></div>
+            <% end %>
+            Application Viewer
+            <% end %>
+          </div> <!-- col -->
+
+          <div class="col-12 col-sm-6 col-lg-4">
+            <%= link_to home_all_applications_path, class: "btn btn-secondary my-3 btn-lg btn-block", style: "height: 67px" do %>
+              All Applications (Admin View)
             <% end %>
           </div> <!-- col -->
 
