--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -140,7 +140,8 @@
                 <td><%= user.email %></td>
                 <td>
                   <%= link_to "Make Admin", make_admin_path(user), method: :post, confirm: "Are you sure you want to make this user an admin?" %><br>
-                  <%= link_to "Add to Committee", make_committee_path(user), method: :post, confirm: "Are you sure you want to make this user a committee member?" %>
+                  <%= link_to "Add to Committee", make_committee_path(user), method: :post, confirm: "Are you sure you want to make this user a committee member?" %><br>
+                  <%= link_to "Delete User", registration_path(user), data: { confirm: "Are you sure you want to delete this user? This action cannot be undone and will delete all actions that have been taken by this user." }, method: :delete %>
                 </td>
               </tr>
             <% end %>
