--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -103,6 +103,7 @@
                   ['TOCA Corporate', 'TOCA Corporate'],
                   ['Orange County', 'Orange County'],
                   ['Torrance', 'Torrance'],
+                  ['TOCA United Kingdom', 'TOCA United Kingdom'],
                   ['Redmond', 'Redmond'],
                   ['Lynnwood', 'Lynnwood'],
                   ['Carrollton', 'Carrollton'],
