Email From Fixed

--- a/app/views/account_actions_mailer/create_an_account_email.html.erb
+++ b/app/views/account_actions_mailer/create_an_account_email.html.erb
@@ -19,7 +19,7 @@
       You have been invited to <%= link_to "create an account", new_user_registration_url, style: "color: #EB0029; font-weight: 700; text-decoration: none" %> using this email address to set up your account.  Please create your account as soon as you can, as there may be time-sensitive things waiting for you.
     </p>
     <p>
-      If you have any issues, feel free to email us at <a href="mailto:admin@tocacares.com" style="color: #EB0029; font-weight: 700; text-decoration: none">admin@tocacares.com</a>.
+      If you have any issues, feel free to email us at <a href="mailto:support@tocacares.com" style="color: #EB0029; font-weight: 700; text-decoration: none">support@tocacares.com</a>.
     </p>
     <hr style="border: 0; border-top: solid 2px #EB0029; margin-top: 25px" />
     <img src="https://tocacares.s3-us-west-1.amazonaws.com/TOCA_CARES_LOGO_FNL.png" style="width: 300px; display: block; margin-right: auto; margin-left: auto">
