--- a/app/views/hardship_mailer/by_other_hardship_accepted_email.html.erb
+++ b/app/views/hardship_mailer/by_other_hardship_accepted_email.html.erb
@@ -22,7 +22,7 @@
     <p>
       If you haven't already done so, you can <%= link_to "create a TOCA Cares account", new_user_registration_url, style: "color: #EB0029; font-weight: 700; text-decoration: none" %> using your TOCA email address.
       Once you have created your account, you can <%= link_to "view your application here", hardship_url(@application), style: "color: #EB0029; font-weight: 700; text-decoration: none" %>.
-      Should you feel the need to alter the application or contact someone at TOCA Cares, please <a href="mailto:admin@tocacares.com" style="color: #EB0029; font-weight: 700; text-decoration: none">click here</a>.
+      Should you feel the need to alter the application or contact someone at TOCA Cares, please <a href="mailto:support@tocacares.com" style="color: #EB0029; font-weight: 700; text-decoration: none">click here</a>.
     </p>
     <p>
       You will soon be contacted by our partnering organization, Helping Hands, who will reach out to you and request additional information about your financial situation to verify you receive the appropriate amount from TOCA Cares. Once verified, Helping Hands will pay your bill directly in a confidential and secure process. Please keep in mind that your response time to Helping Hands’ inquiries will determine the speed of the process. TOCA is glad you’re part of the family.
@@ -32,7 +32,7 @@
       <br>TOCA Cares
     </p>
     <p>
-      If you have any issues, feel free to email us at <a href="mailto:admin@tocacares.com" style="color: #EB0029; font-weight: 700; text-decoration: none">admin@tocacares.com</a>.
+      If you have any issues, feel free to email us at <a href="mailto:support@tocacares.com" style="color: #EB0029; font-weight: 700; text-decoration: none">support@tocacares.com</a>.
     </p>
     <hr style="border: 0; border-top: solid 2px #EB0029; margin-top: 25px" />
     <img src="https://tocacares.s3-us-west-1.amazonaws.com/TOCA_CARES_LOGO_FNL.png" style="width: 300px; display: block; margin-right: auto; margin-left: auto">
