--- a/app/views/hardship_mailer/by_other_hardship_modified_email.html.erb
+++ b/app/views/hardship_mailer/by_other_hardship_modified_email.html.erb
@@ -27,7 +27,7 @@
     </p>
     <p>
       We hope you take advantage of this opportunity, and we look forward to assisting a valuable employee like you.
-      To modify your application <%= link_to "click here", hardship_url(@application), style: "color: #EB0029; font-weight: 700; text-decoration: none" %>. If you feel there has been a mistake, or you have a need to contact someone at TOCA Cares, please <a href="mailto:admin@tocacares.com" style="color: #EB0029; font-weight: 700; text-decoration: none">click here</a>. TOCA is glad you’re part of the family, and we hope you accept our humble offer to help through our completely confidential process.
+      To modify your application <%= link_to "click here", hardship_url(@application), style: "color: #EB0029; font-weight: 700; text-decoration: none" %>. If you feel there has been a mistake, or you have a need to contact someone at TOCA Cares, please <a href="mailto:support@tocacares.com" style="color: #EB0029; font-weight: 700; text-decoration: none">click here</a>. TOCA is glad you’re part of the family, and we hope you accept our humble offer to help through our completely confidential process.
     </p>
     <p>
       Sincerely,
