--- a/app/views/hardship_mailer/hardship_transferred_email.html.erb
+++ b/app/views/hardship_mailer/hardship_transferred_email.html.erb
@@ -20,14 +20,14 @@
       You can now view this application <%= link_to "here", hardship_url(@application), style: "color: #EB0029; font-weight: 700; text-decoration: none" %>.
     </p>
     <p>
-      <strong>Important Note:</strong>  If <%= mail_to @application.email_non_toca, @application.email_non_toca, style: "color: #EB0029; font-weight: 700; text-decoration: none" %> is not your correct non-TOCA email please email an admin at email us at <a href="mailto:admin@tocacares.com" style="color: #EB0029; font-weight: 700; text-decoration: none">admin@tocacares.com</a> immediately to make sure you haven't missed any important communications.
+      <strong>Important Note:</strong>  If <%= mail_to @application.email_non_toca, @application.email_non_toca, style: "color: #EB0029; font-weight: 700; text-decoration: none" %> is not your correct non-TOCA email please email an admin at email us at <a href="mailto:support@tocacares.com" style="color: #EB0029; font-weight: 700; text-decoration: none">support@tocacares.com</a> immediately to make sure you haven't missed any important communications.
     </p>
     <p>
       Sincerely,
       <br>TOCA Cares
     </p>
     <p>
-      If you have any issues, feel free to email us at <a href="mailto:admin@tocacares.com" style="color: #EB0029; font-weight: 700; text-decoration: none">admin@tocacares.com</a>.
+      If you have any issues, feel free to email us at <a href="mailto:support@tocacares.com" style="color: #EB0029; font-weight: 700; text-decoration: none">support@tocacares.com</a>.
     </p>
     <hr style="border: 0; border-top: solid 2px #EB0029; margin-top: 25px" />
     <img src="https://tocacares.s3-us-west-1.amazonaws.com/TOCA_CARES_LOGO_FNL.png" style="width: 300px; display: block; margin-right: auto; margin-left: auto">
