--- a/app/views/application_change_mailer/new_application_email.html.erb
+++ b/app/views/application_change_mailer/new_application_email.html.erb
@@ -20,7 +20,7 @@
       <br>TOCA Cares
     </p>
     <p>
-      If you have any issues, feel free to email us at <a href="mailto:admin@tocacares.com" style="color: #EB0029; font-weight: 700; text-decoration: none">admin@tocacares.com</a>.
+      If you have any issues, feel free to email us at <a href="mailto:support@tocacares.com" style="color: #EB0029; font-weight: 700; text-decoration: none">support@tocacares.com</a>.
     </p>
     <hr style="border: 0; border-top: solid 2px #EB0029; margin-top: 25px" />
     <img src="https://tocacares.s3-us-west-1.amazonaws.com/TOCA_CARES_LOGO_FNL.png" style="width: 300px; display: block; margin-right: auto; margin-left: auto">
