--- a/app/views/testimonials/index.html.erb
+++ b/app/views/testimonials/index.html.erb
@@ -176,7 +176,7 @@
 
                 <hr>
 
-                <% @other_charities.each do |testimonial| %>
+                <% @other_charity.each do |testimonial| %>
                   <div class="single-news mb-3"> <!-- Small news -->
                     <div class="d-flex justify-content-between">
                       <div class="col-11 text-truncate pl-0 mb-1">
