--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -125,7 +125,10 @@
                   ['JC Sports', 'JC Sports'],
                   ['Street Soccer', 'Street Soccer'],
                   ['TOCA Sogility', 'TOCA Sogility'],
-                  ['Tower Hill Sports', 'Tower Hill Sports']
+                  ['Tower Hill Sports', 'Tower Hill Sports'],
+                  ['TOCA Naperville (Naperville, Illinois)', 'TOCA Naperville (Naperville, Illinois)'],
+                  ['TOCA Nashville (Franklin, Tennessee)', 'TOCA Nashville (Franklin, Tennessee)'],
+                  ['D-Bat and TOCA Mansfield (Mansfield, Texas)', 'D-Bat and TOCA Mansfield (Mansfield, Texas)']
                 ] %>
               </div>
 
